# mtcc-python

./: .gitignore  MTCC_README.md  README.md  kimi2-k2.py  mtcc_claudeai.py  mtcc_deepseek.py  mtcc_grok.py  mtcc_implementation.py  mtcc_results_DB1_A_2images.json  requirements.txt
cursor-pro-agent-sonnet-4-june25/: CONVERSATION_EXPORT.md  MTCC_README.md  README.md
fail-cursor-pro-agent-sonnet-4-june25/: create_test_images.py  mtcc_implementation.py  pyproject.toml  test_mtcc.py
fail1-june-2025/: mtcc_claudeai.py  mtcc_gemini_flash.py  mtcc_grok.py
fail2-june-2025/: claudeai_mtcc.py  grok_mtcc.py
fail3-june-2025/: mtcc_openai_gpt4o-41mini-o3.py
fail4-june-2025/: mtcc_chagpt_o3.py  mtcc_chatgpt_o4_mini_high.py  mtcc_claudeai.py  mtcc_claudeai_try2.py  mtcc_deepseek_r1.py  mtcc_gemini_pro_2.5_thinking.py  mtcc_grok3.py  mtcc_minimax.py
fail5-june-2025/: deepseek_r1.py  mtcc_chatgpt_o3.py  mtcc_claudeai.py  mtcc_grok3.py  mtcc_openai_o4_mini_high.py
fail6-june-2025/: mtcc_chatgpt_41.py  mtcc_claudai.py  mtcc_claudeai_opus.py  mtcc_gemini_25_flash.py
fail7-july-2025/: mtcc_python_grok4.py
fail8-july-2025/: mtcc-grok4.py
june-2025/: mtcc_claudeai.py
pass-july-2025/: gemini2.5.py
trial/: gemini2.5.py  mtcc_python_gemini2.5.py
trial-july-2025/: mtcc_python_grok4.py
