[project]
name = "mtcc-python"
version = "1.0.0"
description = "MTCC (Minutia Texture Cylinder Codes) Fingerprint Recognition System"
authors = [
    {name = "MTCC Implementation", email = "mtcc@example.com"}
]
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 
